recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:3: error: not found: value level
	if (level==0) {
            ^