recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.code
def polygonFractal (levels:Int, sides:Int, length:Double, shrink:Double) {
	if (level==0) {
		for (i<- 1 to sides) {
			avance(length)
			droite(360/sides)
		}
	} else {
		for (i<- 1 to sides) {
			avance(length)
			polygonFractal(levels-1,sides,length*shrink, shrink)
			gauche(360/sides)
		}
	}
}
